# Mirror-Map-Sieve

./: .env.example  .gcloudignore  .gitignore  .zenodo.json  AGORA_TOOLS.md  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  Cargo.toml  Dieudonne_SymBrain_v11_Monograph.md  Dockerfile  Dockerfile.airport  Dockerfile.alien_discovery  Dockerfile.autoresearcher  Dockerfile.bak  Dockerfile.inventory  Dockerfile.literature  Dockerfile.runux_pipeline  Dockerfile.symposium  Dockerfile.taste  HF_README.md  HONEST_ASSESSMENT.md  JOURNAL.md  JOURNEY.md  LESSONS_LEARNT.md  LICENSE  LICENSE-COMMERCIAL  LL.md  MEMORY.md  METHODOLOGY.md  Memory.md  OEIS_SUBMISSION.md  README.md  ROADMAP.md  S20-README.md  SPECS.md  SS.md  TESTS.md  TESTSS20.md  TODO.md  (+85 more)
1_algebraic_shielding_solvers/: extracted_polynomials.json  guess_s20_recurrence_int.py  zeilberger_s20.sage
2_lean4_formal_proofs/: S20Recurrence.lean  generate_s20_proof.py  lakefile.lean
3_mirror_map_geometry/: diagonal_search.py  verify_mirror_map.py
4_ai_hardware_attention/: AUTORESEARCH_HYPOTHESES.md  Dockerfile.cy_sieve_gpu  GPU_SETUP.md  README.md  autoresearch_alibi_benchmark.py  autoresearch_findings.json  autosearch_full_H1_joint_checkpoint_results.json  autosearch_full_H4_slopes_only_wd_results.json  autosearch_screening_manifest.json  benchmark.py  benchmark_latency.py  benchmark_model_results.json  benchmark_multi_model.sh  benchmark_results.json  benchmark_results.md  benchmark_results_full.json  benchmark_results_full.md  callens_al_kernel.py  callens_alix_kernel.py  callens_lia_kernel.py  cy_sieve_attention.py  cy_sieve_autoresearch.py  cy_sieve_bias_families.py  cy_sieve_exact_kernel.py  cy_sieve_hc_refine.py  cy_sieve_hetero_pos.py  cy_sieve_memory_experiments.py  cy_sieve_perf.py  cy_sieve_quality_gate.py  cy_sieve_reference.py  cy_sieve_triton.py  dense_extrapolation_gate.py  gcp_startup.sh  gcp_startup_autoresearch.sh  gcp_startup_hc_refine.sh  gcp_startup_hetero.sh  gcp_startup_openweight.sh  generate_paper.py  gpu_benchmark_model_results.json  gpu_benchmark_multi_model.py  (+31 more)
5_triton_kernel/: benchmark_triton.py  s20_attention.py  test_s20_attention.py
S20-Discovery/: Dockerfile  Dockerfile.latex  Dockerfile.lean4  Dockerfile.s15_benchmark  README.md  cloudbuild-latex.yaml  cloudbuild-lean4.yaml  cloudbuild.s15_benchmark.yaml
Structures/: S20Recurrence.lean  TelescopingBinomial.lean  generate_s20_proof.py
achievement_output/: symbrain_v16_horizonmath_monograph.aux  symbrain_v16_horizonmath_monograph.out  symbrain_v16_horizonmath_monograph.tex  symbrain_v16_horizonmath_monograph.toc  validate_archimedes_all_report.md
agents/: Dockerfile  __init__.py  airlines_or_symposium.py  airlines_orchestration.py  airport_operations_autoresearch.py  base.py  degennes_agent.py  discovery_runner.py  hypatia_aeronautics_monograph.py  or_pipeline_runner.py  revenue_management_autoresearch.py  sentinel_pipeline.py  sentinel_server.py  symposium_runner.py  validate_degennes_airlines.py
alexandrie/: __init__.py  airlines_or_monograph.aux  airlines_or_monograph.out  airlines_or_monograph.tex  airlines_or_monograph.toc  airport_100page_monograph.tex  airport_operations_monograph.tex  final_paper_claim_verification.aux  final_paper_claim_verification.out  final_paper_claim_verification.tex  hub.py  intermediary_paper_verified_mathematics.aux  intermediary_paper_verified_mathematics.out  intermediary_paper_verified_mathematics.tex  metadata.py  open_rooms.md  patent_draft_1781453789.aux  patent_draft_1781453789.tex  patent_portfolio_1781454664.tex  patent_portfolio_1781455106.aux  (+12 more)
alexandrie/solvers/runux_math_kernel/: Cargo.toml  Dockerfile.runux_solver
alexandrie/solvers/runux_math_kernel/src/: main.rs
alexandrie/solvers/runux_math_kernel/src/solvers/: calabi_yau.rs  kn_crossing.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/kernel/: ffi.rs  mod.rs  scheduler.rs  simd_ops.rs
core/src/memory/: arena.rs  bump_allocator.rs  mod.rs  numa_pinning.rs
core/src/symbrain/: coproc_pipeline.rs  dynamic_gating.rs  early_stopping.rs  lora_engine.rs  mcts_search.rs  mod.rs  pfc_router.rs  rlcf_optimizer.rs
core/src/telemetry/: budget_monitor.rs  metrics.rs  mod.rs
core/tests/: integration_tests.rs  memory_tests.rs  symbrain_tests.rs
discovery/rust_ramsey/: Cargo.toml
discovery/rust_ramsey/src/: main.rs
solvers/: Cargo.toml
solvers/src/: lib.rs
solvers/src/industrial/: cfd.rs  mod.rs  thermal.rs
solvers/src/physics/: boundary.rs  conservation.rs  mod.rs
solvers/src/sundials/: cvode_bridge.rs  lorenz.rs  lotka_volterra.rs  mod.rs  navier_stokes.rs  robertson.rs
solvers/tests/: solver_tests.rs
(+1250 files in other folders)
