# Copyright (c) 2026 Xavier Callens / Socrate AI Lab
# Licensed under Apache 2.0 - see LICENSE file

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socrateai-agora"
version = "3.4.0"
description = "🏛️ SocrateAI Scientific Agora — Neuro-Symbolic Frugal AI Multi-Agent Framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Xavier Callens", email = "callensxavier@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "structlog>=23.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pynvml>=11.5.0",
    "mpmath>=1.3.0",
    "z3-solver>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.0.260",
    "mypy>=1.2.0",
]
nvidia = [
    "nvidia-modulus>=0.4.0",
    "bionemo>=0.1.0",
]
galileo-enhanced = [
    "sympy>=1.12",
    "networkx>=3.0",
    "torch>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "alexandrie*", "nvidia*"]
