[package]
name = "agora-core"
version = "0.1.0"
edition = "2024"
authors = ["Xavier Callens <callensxavier@gmail.com>"]
license = "Apache-2.0"
description = "Core framework for the SocrateAI Scientific Agora — neuro-symbolic, frugal-AI cognitive engine"
repository = "https://github.com/socrate-ai/SocrateAI-Scientific-Agora"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
rand = "0.8"
num-traits = "0.2"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full", "test-util"] }

